Add player add endpoint
