# docs/swagger.json
@@ -18,7 +18,39 @@
     "host": "localhost:8082",
     "basePath": "/",
     "paths": {
-        "/": {
+        "/player": {
+            "post": {
+                "description": "add player",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Add player",
+                "operationId": "add-player",
+                "parameters": [
+                    {
+                        "description": "Add player",
+                        "name": "player",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.Player"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                }
+            }
+        },
+        "/players": {
             "get": {
                 "description": "get list players",
                 "consumes": [
